Fix blog quote left border color on dark mode

--- a/src/stylesheets/BlogPost.module.sass
+++ b/src/stylesheets/BlogPost.module.sass
@@ -34,6 +34,9 @@
     margin: 1.5em 0
     padding: 0.5em 10px
     transition: background-color $colorTransitionDuration linear
+    p
+      margin-top: 0
+      margin-bottom: 10px
   blockquote:before
     color: $light-grey
     content: open-quote
@@ -64,8 +67,8 @@
   pre
     background: $shade-black
   blockquote
-    background: $shade-black
-    border-left: 10px solid $shade-black
+    background: $space-black
+    border-left: 10px solid $dark-grey
 
 .blogPostBackground
   min-height: 100vh
