--- a/src/utils/blogPalette.sass
+++ b/src/utils/blogPalette.sass
@@ -1,5 +1,6 @@
 $black: #000
 $midnight-black: #111
+$space-black: #222
 $shade-black: #2D2D2D
 $dark-blue: #003c85
 $blue: #5c8afe
